src/test/deca/context/valid/126_booleanInstanceOf.deca
// Description:
//    Programme minimaliste: une classe et des Cast dans le Main.
//
// Résultats:
//	Classe non nulle
//
// Historique:
//    cree le 01/01/2022

class A {}
{
   A a = new A();
   boolean b = a instanceof A;
}
